# stunning-fiesta

./: .coverage  README.md  noxfile.py  pyproject.toml
src/stunning_fiesta/: __init__.py  console.py
tests/: conftest.py  test_console.py  test_wikipedia.py
